--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "description": "Build your own SaaS business with SaaS boilerplate. Productive stack: React, Material-UI, Next, MobX, WebSockets, Express, Node, Mongoose, MongoDB and Docker CE. Written with TypeScript.",
   "engines": {
-      "node":"12.16.1"
+    "node": "12.16.1",
+    "yarn": "1.22.4"
   },
   "scripts": {
     "dev": "yarn --cwd ./api dev & yarn --cwd ./app dev",
