--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -8,8 +8,8 @@
     "allowSyntheticDefaultImports": true,
     "removeComments": false,
     "preserveConstEnums": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": false,
     "sourceMap": true,
     "skipLibCheck": true,
     "baseUrl": ".",
