--- a/api/package.json
+++ b/api/package.json
@@ -27,16 +27,17 @@
     "compression": "^1.7.4",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
-    "dotenv": "8.2.0",
-    "express": "4.17.1",
-    "express-session": "^1.17.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "he": "^1.2.0",
     "helmet": "4.1.0-rc.2",
     "highlight.js": "^10.1.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
     "marked": "^1.1.0",
     "mongoose": "^5.9.2",
-    "node-fetch": "^2.6.0",
+    "node": "^12.16.1",
+    "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "passwordless": "^1.1.3",
