--- a/app/package.json
+++ b/app/package.json
@@ -30,7 +30,6 @@
     "mobx-react": "^6.2.2",
     "moment": "^2.27.0",
     "next": "9.1.2",
-    "node": "^12.16.1",
     "nprogress": "0.2.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
@@ -44,7 +43,7 @@
     "@types/he": "^1.1.1",
     "@types/helmet": "^0.0.45",
     "@types/marked": "^1.1.0",
-    "@types/node": "^14.6.4",
+    "@types/node": "12.12.3",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "@types/socket.io-client": "^1.4.33",
